galley/testdatasets/validation/dataset/security-v1beta1-PeerAuthentication-invalid.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: invalid-peer-authentication
spec:
