galley/testdatasets/validation/dataset/security-v1beta1-PeerAuthentication-valid.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: valid-peer-authentication
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  mtls:
    mode: PERMISSIVE
  peerLevelMtls:
    8080:
      mode: STRICT
