galley/testdatasets/validation/dataset/networking-v1alpha3-Sidecar-invalid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: invalid-sidecar-config
spec:
  egress:
