galley/testdatasets/validation/dataset/networking-v1alpha3-VirtualService-regexp-invalid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecma-not-v2
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        regex: "^(?!.<path to match here>.).*"
    route:
    - destination:
        host: productpage
