galley/testdatasets/validation/dataset/networking-v1beta-DestinationRule-invalid.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: invalid-destination-rule
spec:
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
