galley/testdatasets/validation/dataset/networking-v1beta-Sidecar-invalid.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: invalid-sidecar-config
spec:
  egress:
