galley/testdatasets/validation/dataset/networking-v1beta-Sidecar-valid.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: valid-sidecar-config
spec:
  egress:
  - hosts:
    - "abc/*"
