galley/testdatasets/validation/dataset/networking-v1beta1-ServiceEntry-invalid.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: invalid-service-entry
spec:
  ports:
    - number: 80
      name: http
      protocol: HTTP
  discovery: DNS
  endpoints:
    # Rather than relying on an external host that might become unreachable (causing test failures)
    # we can mock the external endpoint using service t which has no sidecar.
    - address: t.istio-system.svc.cluster.local # TODO: this is brittle
      ports:
        http: 8080 # TODO test https
